Update Gradle and dependencies Add task "runClient" Add IndexBuilder (WIP)